fix horizontal scroll TOC and CSP to allow external link to oracle

--- a/src/main/content/antora_ui/src/sass/nav.scss
+++ b/src/main/content/antora_ui/src/sass/nav.scss
@@ -83,10 +83,13 @@ html.is-clipped--nav {
 .nav-panel-menu::-webkit-scrollbar,
 .nav-panel-explore .components::-webkit-scrollbar {
   width: 0.25rem;
+  height: 0.25rem;
 }
 
 .nav-panel-menu::-webkit-scrollbar-thumb,
-.nav-panel-explore .components::-webkit-scrollbar-thumb {
+.nav-panel-menu::-webkit-scrollbar-thumb:horizontal,
+.nav-panel-explore .components::-webkit-scrollbar-thumb,
+.nav-panel-explore .components::-webkit-scrollbar-thumb:horizontal {
   background-color: var(--nav-border-color);
 }
 
